k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: node-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-api
  template:
    metadata:
      labels:
        app: node-api
    spec:
      containers:
        - name: node-api
          image: "elisiomualumene/node_api:secret"
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            periodSeconds: 5
            failureThreshold: 1
            timeoutSeconds: 1
            successThreshold: 1
          ports:
            - containerPort: 8000
          resources:
          #vCPU -> 1000m (milicore)
            requests:
              cpu: 100m
              memory: 20Mi
            limits:
              cpu: 500m
              memory: 25Mi
