k8s/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: "node-api"
  labels:
    app: "node-api"
spec:
  containers:
    - name: node-api
      image: "elisiomualumene/node_api:latest"
