k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: node-api
  type: LoadBalancer
  ports:
  - name: node-port
    port: 80
    targetPort: 8000
    protocol: TCP
