k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsEncrypt"
    ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    name: myingress
spec:
  rules:
    - host: <Host>
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: <Service>
                port:
                  number: 80
  tls:
    - hosts:
        - "ingress.kube_teste.com"
      secretName: letsencrypt-tls
